--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -2,8 +2,10 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
 .circle{
     border-radius: 50% ;
-    width: 35px;
-    height: 35px;
+    width: auto;
+    height: auto;
+    max-height: 35px;
+    max-width: 35px;
     display: block;
 }
 body {
