--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -890,7 +890,7 @@ form .buttoncancel input:hover{
 }
 
 .cmtholder {
-    height: 296px;
+    height: 300px;
     width: 100%;
     /* background-color: #4CAF50; */
     overflow-y: scroll;
@@ -899,7 +899,7 @@ form .buttoncancel input:hover{
 .cmt {
     /* background-color: aqua; */
     width: 100%;
-    height: 76px;
+    height: 50px;
     display: flex;
     margin: 0;
     margin-bottom: 30px;
@@ -908,7 +908,8 @@ form .buttoncancel input:hover{
 
 .cmttext {
     margin: 0;
-    margin-left: 30px;
+    margin-left: 15px;
+    margin-top: 15px;
     height: 100%;
     position: relative;
     width: 400px;
@@ -971,7 +972,7 @@ form .buttoncancel input:hover{
 
 .newcommentbox {
     width: 100%;
-    height: 34px;
+    height: 50px;
     display: flex;
     margin: 0;
     margin-top: 2%;
@@ -982,8 +983,9 @@ form .buttoncancel input:hover{
     height: 34px;
     background: bisque;
     border-radius: 20px;
-    margin-left: 30px;
-    padding-left: 10px;
+    margin-left: 10px;
+    margin-bottom: 0px;
+    padding-left: 20px;
     box-sizing: border-box;
 }
 
@@ -991,7 +993,7 @@ form .buttoncancel input:hover{
     align-self: center;
     height: 24px;
     width: 24px;
-    margin-left: 10px;
+    margin-left: 5px;
     cursor: pointer;
 }
 
