--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -475,6 +475,18 @@ body{
     5px 0px 5px -5px rgba(0, 0, 0, 0.75),
     0px 5px 5px -5px rgba(0, 0, 0, 0.75);
 }
+
+.postImage{
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+    overflow: hidden;
+    position: relative;
+    padding: 0px;
+    overflow: hidden;
+    object-fit: cover;
+}
+
 .postinput{
     display: inline-block;
     width: 50%;
