--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -476,6 +476,21 @@ body{
     0px 5px 5px -5px rgba(0, 0, 0, 0.75);
 }
 
+#divImage{
+    width: 100%;
+    height: 93%;
+    border-radius: 25px;
+    overflow: hidden;
+    position: relative;
+    padding: 0px;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+#upload_file{
+    padding-bottom: -15%;
+}
+
 .postImage{
     width: 100%;
     height: 100%;
